Subindo melhorias de responsividade do ADM

--- a/PI/src/Css/pedido_personalizado_adm.css
+++ b/PI/src/Css/pedido_personalizado_adm.css
@@ -116,9 +116,9 @@
     .mobile_btn_salvar{
         display: flex;
     }
-    #conatiner_btn_adm_pc{
+    /* #conatiner_btn_adm_pc{
         display: none;
-    }
+    } */
 
 }
 
