--- a/PI/src/Css/cadastrar_categoria_adm.css
+++ b/PI/src/Css/cadastrar_categoria_adm.css
@@ -65,8 +65,8 @@
 .imagemCategoria{
     position: absolute;
     background-color: orange;
-    width: 100% !important;
-    height: 100% !important;
+    width: 100% ;
+    height: 100% ;
     inset: 1;
     cursor: pointer;
     display: flex;
@@ -76,7 +76,12 @@
     max-width: 400px;
     max-height: 200px;
 }
-
+@media(max-width: 990px){
+    .imagemCategoria-active{
+        max-width: 100%;
+        max-height: 100%;
+    }
+}
 @media (max-width: 490px){
 
     .conatiner_cadastro_adm_items_body_list{
@@ -89,7 +94,7 @@
 @media(max-width: 860px){
 
     .imagemCategoria-active{
-        max-width: 100px;
-        max-height: 50px;
+        max-width: 100%;
+        max-height: 100%;
     }
 }
