--- a/PI/src/Css/style_adm.css
+++ b/PI/src/Css/style_adm.css
@@ -236,8 +236,6 @@
 
 
 @media (max-width: 800px) {
-
-    
     .main_adm{
         padding: 0;
         z-index: 1;
@@ -247,6 +245,7 @@
         height: 100%;
         position: relative;
         padding: 10px;
+        margin-bottom: 5rem;
     }
     #sidebar_adm{
         display: none;
