Subindo melhorias na responsividade do sobre nois

--- a/PI/src/Css/style.css
+++ b/PI/src/Css/style.css
@@ -3,7 +3,7 @@
 @import url(home.css);
 @import url(login.css);
 @import url(navbar.css);
-@import url(syte.css);
+/* @import url(syte.css); */
 @import url(sobre_nos.css);
 @import url(favoritos.css);
 @import url(perfil.css);
